--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ssu-bt-telegram-bot",
   "version": "1.0.0",
   "dependencies": {
-    "mongoose": "^4.9.9",
+    "mongoose": "4.9.9",
     "request": "^2.81.0",
     "telegram-node-bot": "^4.0.5"
   }
